@@ -89,6 +89,14 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the size of the container
+        /// @param size  The new size of the container
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setSize(const Layout2d& size) override;
+        using Widget::setSize;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Returns a list of all the widgets
         ///
         /// @return Vector of all widget pointers
@@ -207,6 +215,13 @@ namespace tgui
         ///
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         void uncheckRadioButtons();
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the space available for widgets inside the container
+        /// @return Size of the container
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        virtual Vector2f getInnerSize() const;
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -434,6 +449,8 @@ namespace tgui
 
         Widget::Ptr m_widgetBelowMouse;
         Widget::Ptr m_focusedWidget;
+
+        Vector2f m_prevInnerSize;
 
         // Did we enter handleEvent directly or because we got a MouseReleased event?
         bool m_handingMouseReleased = false;
