@@ -106,6 +106,13 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the space available for widgets inside the container
+        /// @return Size without padding
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Vector2f getInnerSize() const override;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Returns the distance between the position of the container and a widget that would be drawn inside
         ///        this container on relative position (0,0)
         ///
