@@ -103,6 +103,13 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the space available for widgets inside the container
+        /// @return Size without borders and padding
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Vector2f getInnerSize() const override;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Returns the distance between the position of the container and a widget that would be drawn inside
         ///        this container on relative position (0,0)
         ///
@@ -143,12 +150,6 @@ namespace tgui
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     protected:
-
-        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        /// @brief Returns the size without borders and padding
-        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        Vector2f getInnerSize() const;
-
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Retrieves a signal based on its name
