@@ -6,6 +6,7 @@ TGUI 0.8.1  (TBD)
 - You can now connect a signal handler to a single menu item in MenuBar
 - ChildWindow position can be locked to disable dragging it
 - Scrollbar thumb should not become smaller than the scrollbar width
+- Percentage in layout no longer includes the outline of the parent
 - MenuBar didn't work when moved and inverted menu direction was broken
 - Text size in MenuBar was reset when changing font
 - Handle delete button on android correctly when using SFML >= 2.5
